--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,105 +6,81 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".ui.DetailsActivity">
-
-<com.google.android.material.card.MaterialCardView
-    android:id="@+id/cardview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="8dp"
-    android:layout_margin="12dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageViewStore"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <ImageView
-            android:id="@+id/asset_image"
-            android:layout_width="wrap_content"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollViewDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/imageViewStore"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayoutDetail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:contentDescription="@string/asset_image"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/asset_symbol"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewStoreName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre Tienda"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            android:layout_marginTop="24dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewStoreAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Dirección"
+                android:drawableStart="@drawable/baseline_error_24"
+                android:drawablePadding="10dp"
+                android:textSize="18sp"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/textViewStoreName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-            app:layout_constraintEnd_toEndOf="parent"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewStoreOfficeHours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Horario de Atención"
+                android:drawableStart="@drawable/baseline_error_24"
+                android:drawablePadding="10dp"
+                android:textSize="18sp"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/textViewStoreAddress"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/asset_image"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewStoreHistory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Historia"
+                android:textSize="18sp"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/textViewStoreOfficeHours"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            />
-
-        <TextView
-            android:id="@+id/asset_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-
-            android:layout_marginTop="24dp"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold"
-
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/asset_symbol" />
-
-        <TextView
-            android:id="@+id/asset_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_margin="24dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/asset_name" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</com.google.android.material.card.MaterialCardView>
-
-
-<TextView
-    android:id="@+id/asset_supply"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    android:layout_marginStart="24dp"
-    android:layout_marginTop="24dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/cardview" />
-
-<TextView
-    android:id="@+id/asset_marketcap"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    android:layout_marginStart="24dp"
-    android:layout_marginTop="24dp"
-    app:layout_constraintTop_toBottomOf="@+id/asset_supply"
-    tools:layout_editor_absoluteX="0dp" />
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
